# defensible_landing

./: .gitignore  .gitmodules  README.md  netlify.toml
landing/: config.toml  config.toml.old  config.yml
landing/content/: beyond.md  beyond_part_1.md  beyond_part_2.md  beyond_part_3.md  contact.md  engage.md  form_success.md  pansift.md  schools.md  (+3 more)
landing/static/ipfabric-reports/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt  run_report.py  run_report_test.py  setup.py
landing/static/ipfabric-reports/export/: cve-2024-11-18_T09-33.csv  cve-SITE 3 - Server Farm-2024-11-18_T09-35.csv  discovery-2024-11-18_T09-33.csv  port-capacity-2024-11-18_T09-35.csv  port-capacity-SITE 3 - Server Farm-2024-11-18_T09-37.csv  trunk-mismatch-2024-11-18-09-35.xlsx
landing/static/ipfabric-reports/ipfabric_reports/: __init__.py  cli.py  config.py  data_collectors.py  main.py  modules.py  report_registry.py  report_renderer.py  report_types.py
landing/static/ipfabric-reports/ipfabric_reports/frontend/: frontend.py
landing/static/ipfabric-reports/ipfabric_reports/styles/: README.md  color_variables.css  default_style.css
landing/static/ipfabric-reports/ipfabric_reports/styles/themes/: chart_colors.json  default_colors.css  theme_dark.css  theme_light.css
landing/static/ipfabric-reports/ipfabric_reports/templates/: README.md  _macros.html  base_template.html  cve_template.html  discovery_template.html  management-protocol_template.html  overview-compare_template.html  overview_template.html  port-capacity_template.html  trunk-mismatch_template.html
(+58 files in other folders)
